--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,5 +1,6 @@
 - if @restaurants.any?
   - @restaurants.each do |restaurant|
+    = link_to restaurant.name, restaurant_path(restaurant)
     %h2= restaurant.name
 - else
   %h1 No restaurants yet!
