added update functionality

--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,7 +1,12 @@
 - if @restaurants.any?
   - @restaurants.each do |restaurant|
     = link_to restaurant.name, restaurant_path(restaurant)
+    %h2= restaurant.description
+    = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
     %h2= restaurant.name
+
+
+
 - else
   %h1 No restaurants yet!
 
